[package]
name = "goldleaf-derive"
version = "0.3.2"
edition = "2021"
description = "Macros for goldleaf."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ImTheSquid/goldleaf"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]

[lib]
proc-macro = true

[features]
sync = []

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.38"
