[package]
name = "goldleaf"
version = "0.1.0"
edition = "2021"
description = "A thin wrapper over MongoDB to make it shine!"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ImTheSquid/goldleaf"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
mongodb = "2.7.0"
goldleaf-derive = { version = "0.1.0", path = "../goldleaf-derive" }
